# ti_mcu_code_base

./: 0_clean_temp.bat  0_format_indents.bat  clean_temp.bat  clean_temp.ps1  code_base.mk  download_code_base.bat  format_indents.bat  line_sorted.txt  line_sorter.txt  log_book.txt  log_book_bootloader.txt  main.c  main_tirtos.c  readMe.txt  rev_lines.sh  rev_sort_line.bat  sort_line.sh  sort_lines.bat  sorted_lines.txt  sys_config_common.h  task_config_base.h  task_config_boot.h  task_config_harvester.h
Drivers/: drivers.mk
Drivers/axp192/: axp192_commands.c  axp192_drv.c
Drivers/bmp180/: bmp180_commands.c  bmp180_commands.h  bmp180_drv.c  bmp180_drv.h
Drivers/boot_drv/: boot_cfg.h  boot_commands.c  boot_commands.h  boot_driver.c  boot_driver.h  boot_drv.mk
Drivers/bq25171_q1_drv/: bq25171_q1_commands.c  bq25171_q1_commands.h  bq25171_q1_drv.c  bq25171_q1_drv.h
Drivers/can/: can_drv.c  can_drv.h
Drivers/cli_drv/: base_cmd.c  base_cmd.h  cli_commands.h  cli_drv.mk  cli_manager.c  cli_manager.h  common_commands.h  log_commands.c  log_commands.h  shell_commands.h  table_utils.c  table_utils.h  task_info.c  task_info.h
Drivers/ext_ram_simulator/: ext_ram_sim_commands.c  ext_ram_sim_commands.h  ext_ram_sim_drv.c  ext_ram_sim_drv.h
Drivers/flash_fs/: flash_fs.c  flash_fs.h  flash_fs.mk  flash_fs_commands.c  flash_fs_commands.h  flash_fs_ll.c  flash_fs_ll.h  memory_layout.h
Drivers/gpio_pwm/: gpio_pwm_commands.c  gpio_pwm_commands.h  gpio_pwm_drv.c  gpio_pwm_drv.h
Drivers/led_drv/: led_commands.c  led_drv.c  led_drv.h
bsp_cc26x2/: bsp.opt  bsp_cc26x2.mk  sys.h  ti_drivers_config.c  ti_drivers_config.h
bsp_esp32/: sys.h
bsp_stm32f4/: stm32f4xx_it.c  stm32f4xx_it.h  sys.c  sys.h
com_utils/: common_commands.h  uart_common.h
common/: common.mk  common_functions.c  common_functions.h  core_utils.c  core_utils.h  gpio_common.c  gpio_common.h  hw_init.c  spi_common.c  spi_common.h  sw_init.c  uart_common.c  uart_common.h
components/: components.mk
docs/: CC26x2_ToolChain.dot  CC26x2_bootloader_logbook.txt  Harvester_can_frames.dbc  LoRa_link_dist_rate.txt  ToolChain_CC26x2.dot  build_dependency_graph.bat  build_toolchain_graph.bat  calc_board_params.py  calc_horizon.py  dependencies.dot  dependency_graph_build.bat  links.txt  plot_data_rate_dist.py  plot_data_rate_dist_file.py  toolchain_graph_build.bat
fw_loader_debug/: 1_build.bat  2_run.bat  main.c  maintain.bat
harvester_boot_d/: .ccsproject  .cproject  board_layout.c  board_layout.h  build_local.bat  build_local_home.bat  cc13x2_cc26x2_nortos.cmd  sys_config.h  task_config.h
harvester_generic_d/: .cproject  .project  board_layout.c  board_layout.h  build_local.bat  build_local_home.bat  cc13x2_cc26x2_nortos.cmd  launchxl_cc26x2r1.syscfg  sys_config.h  task_config.h
harvester_utest_sw_d/: .cproject  .project  board_layout.c  build_local_home.bat
launchxl_cc26x2r1/: .ccsproject  .cproject  .project  build.bat  cc13x2_cc26x2_nortos.cmd  hw_init.c  hw_init.h  load_fw.bat  main.c  sw_init.c  sw_init.h  task_config.h  version.h
launchxl_cc26x2r1_D/: .cproject  .project  auto_version.h  board_layout.h  build.bat  build_local.bat  build_local_home.bat  load_fw.bat  load_local_home.bat  load_local_office.bat  main.c  param_ids.h  sys_config.h  task_config.h
launchxl_cc26x2r1_R/: .cproject  .project  auto_version.h  board_layout.c  board_layout.h  build.bat  build_local.bat  build_local_home.bat  load_local_office.bat  main.c  sys_config.h  task_config.h  version_build.h
launchxl_cc26x2r1_boot_D/: .cproject  .project  build_local.bat  load_local.bat  sys_config.h  task_config.h
launchxl_cc26x2r1_boot_R/: .cproject  .project  board_layout.h  build_local.bat  build_local_home.bat  sys_config.h  task_config.h  version.h
launchxl_cc26x2r1_v2/: .cproject  .project  build.bat  hw_init.c  main.c  shell_commands.h  sw_init.c
leet_code_tasks/: implement_queue.c  implement_queue.h  leet_code.mk
mcu/: cc2642R1F.h  cc2652R1F.h  esp32.h
options/: HarvesterPower.opt  KeyValMap.opt  bootLoader.opt  can.opt  cc2642.opt  cc2652.opt  cli.opt  cli_base.opt  cli_debug.opt  debug.opt  gnss.opt  gnss_rtk.opt  hardware_components.opt  harvester_commands.opt  harvester_v1.opt  log.opt  lora.opt  mcu.opt  nmea.opt  release.opt  rs232.opt  rtk.opt  software_components.opt  sort_files_in_folder.sh  tbfp.opt  telematic.opt  uTestLoRa.opt  uTests.opt  uTestsCan.opt  uTestsGnss.opt  uTestsKeyValMap.opt  uTestsSwComponents.opt  uTestsUart.opt  zed_f9p.opt
projects/t_beam_v1_1_example/main/: CMakeLists.txt  fw_config.h  hello_world_main.c  main_thread.c  sys_config.h  task_config.h  version.h
protocols/: protocol_common.h  protocol_diag.c  protocol_diag.h  protocols.mk
stm32f413zgj6_d/: board_layout.c  board_layout.h  sys_config.h  version.h
tool/: ZedF9pFwUpd.bat  build.bat  clean_artefacts.bat  flashHex.bat  hex2bin.bat  launchBtool.bat  launch_terminal.bat  load_fw.bat  ship_code_base.bat  ship_project.bat  sign_artefacts.bat  sign_code.bat  sign_firmware.bat  sort_line.sh  static_analysis.bat
unit_tests/: print_buffer.c  print_buffer.h  test_list.c  test_list.h  tmp_log_level.h  unit_test.c  unit_test.h  unit_test.mk  unit_test_check.h  unit_test_check_cortex_m.h  unit_test_check_general.h  unit_test_check_x86.h  unit_test_commands.c  unit_test_commands.h  unit_test_info.h  unit_test_macro.h  unit_test_run.c  unit_test_run.h
utils/: array.c  array.h  bit_utils.c  bit_utils.h  byte_utils.c  byte_utils.h  data_utils.c  data_utils.h  debug_info.c  debug_info.h  fifo_array.c  fifo_array.h  fifo_char.c  fifo_char.h  fifo_char_buffer.c  fifo_char_buffer.h  fifo_index.c  fifo_index.h  float_utils.c  float_utils.h  gnss_diag.c  gnss_diag.h  gnss_utils.c  gnss_utils.h  health_monitor.c  health_monitor.h  health_monitor_command.c  health_monitor_command.h  macro_utils.h  none_blocking_pause.c  none_blocking_pause.h  read_mem.c  read_mem.h  stream.h  string_stream.h  time_diag.c  time_diag.c.bak  time_diag.h  time_utils.c  time_utils.h  (+3 more)
win_utils/: scan_serial_port.c  scan_serial_port.h  win_utils.c  win_utils.mk
(+1124 files in other folders)
