
set(PATH_INC)
set(PATH_SRC)
set(PATH_WORKSPACE  C:/1_job/0_NPP_IT_ELMA/code_base_workspace_esp/ti_mcu_code_base)

list(APPEND PATH_SRC ${PATH_WORKSPACE}"/bsp_esp32/clocks/clocks.c")
list(APPEND PATH_SRC ${PATH_WORKSPACE}"/bsp_esp32/gpio/gpio_drv.c")
list(APPEND PATH_INC ${PATH_WORKSPACE}"/bsp_esp32/clocks")
list(APPEND PATH_INC ${PATH_WORKSPACE}"/bsp_esp32/gpio")
list(APPEND PATH_INC "C:/esp/esp-idf/components/hal/include/hal")
list(APPEND PATH_INC ${PATH_WORKSPACE}"/")
list(APPEND PATH_INC ${PATH_WORKSPACE}"/boards/tBeamV1_1")
list(APPEND PATH_INC ${PATH_WORKSPACE}"/bsp_esp32")
list(APPEND PATH_INC ${PATH_WORKSPACE}"/bsp_esp32/core_drv")
list(APPEND PATH_INC ${PATH_WORKSPACE}"/bsp_esp32/flash")
list(APPEND PATH_INC ${PATH_WORKSPACE}"/bsp_esp32/uart")
list(APPEND PATH_INC ${PATH_WORKSPACE}"/common")
list(APPEND PATH_INC ${PATH_WORKSPACE}"/Drivers/boot_drv")
list(APPEND PATH_INC ${PATH_WORKSPACE}"/Drivers/cli_drv")
list(APPEND PATH_INC ${PATH_WORKSPACE}"/Drivers/task_drv")
list(APPEND PATH_INC ${PATH_WORKSPACE}"/components/system")
list(APPEND PATH_INC ${PATH_WORKSPACE}"/utils/utils_sys")
list(APPEND PATH_INC ${PATH_WORKSPACE}"/projects/t_beam_v1_1_example/main")
list(APPEND PATH_INC ${PATH_WORKSPACE}"/utils")
list(APPEND PATH_INC ${PATH_WORKSPACE}"/utils/fifo")
list(APPEND PATH_INC ${PATH_WORKSPACE}"/utils/io_utils")
list(APPEND PATH_INC ${PATH_WORKSPACE}"/utils/utils_string")
list(APPEND PATH_SRC ${PATH_WORKSPACE}"/bsp_esp32/core_drv/core_driver.c")
list(APPEND PATH_SRC ${PATH_WORKSPACE}"/bsp_esp32/flash/flash_drv.c")
list(APPEND PATH_SRC ${PATH_WORKSPACE}"/bsp_esp32/sys.c")
#list(APPEND PATH_SRC ${PATH_WORKSPACE}"/bsp_esp32/uart/uart_commands.c")
list(APPEND PATH_SRC ${PATH_WORKSPACE}"/utils/io_utils/writer_config.c")
list(APPEND PATH_SRC ${PATH_WORKSPACE}"/common/hw_init.c")
list(APPEND PATH_SRC ${PATH_WORKSPACE}"/utils/utils_string/convert.c")
list(APPEND PATH_SRC ${PATH_WORKSPACE}"/Drivers/cli_drv/base_cmd.c")
list(APPEND PATH_SRC ${PATH_WORKSPACE}"/common/sw_init.c")
list(APPEND PATH_SRC ${PATH_WORKSPACE}"/utils/data_utils.c")
list(APPEND PATH_SRC ${PATH_WORKSPACE}"/utils/fifo/fifo_index.c")
list(APPEND PATH_SRC ${PATH_WORKSPACE}"/utils/io_utils/writer_generic.c")
list(APPEND PATH_SRC ${PATH_WORKSPACE}"/bsp_esp32/uart/uart_drv.c")
list(APPEND PATH_SRC ${PATH_WORKSPACE}"/common/common_functions.c")
list(APPEND PATH_SRC ${PATH_WORKSPACE}"/common/uart_common.c")
list(APPEND PATH_SRC ${PATH_WORKSPACE}"/utils/io_utils/oprintf.c")
list(APPEND PATH_SRC ${PATH_WORKSPACE}"/Drivers/cli_drv/cli_manager.c")
list(APPEND PATH_SRC ${PATH_WORKSPACE}"/Drivers/cli_drv/table_utils.c")
list(APPEND PATH_SRC ${PATH_WORKSPACE}"/Drivers/task_drv/task_info.c")
list(APPEND PATH_SRC ${PATH_WORKSPACE}"/utils/debug_info.c")
list(APPEND PATH_SRC ${PATH_WORKSPACE}"/utils/fifo/fifo_char.c")
list(APPEND PATH_SRC ${PATH_WORKSPACE}"/utils/io_utils/io_utils.c")
list(APPEND PATH_SRC ${PATH_WORKSPACE}"/utils/io_utils/log.c")
list(APPEND PATH_SRC ${PATH_WORKSPACE}"/utils/io_utils/ostream.c")
list(APPEND PATH_SRC ${PATH_WORKSPACE}"/utils/io_utils/uart_string_reader.c")
list(APPEND PATH_SRC ${PATH_WORKSPACE}"/utils/utils_string/str_utils.c")

list(APPEND PATH_SRC ${PATH_WORKSPACE}"/utils/io_utils/writer_uart.c")
list(APPEND PATH_SRC ${PATH_WORKSPACE}"/utils/time_utils.c")
list(APPEND PATH_SRC ${PATH_WORKSPACE}"/utils/bit_utils.c")
list(APPEND PATH_SRC ${PATH_WORKSPACE}"/utils/read_mem.c")
list(APPEND PATH_SRC ${PATH_WORKSPACE}"/utils/byte_utils.c")

list(APPEND PATH_SRC ${PATH_WORKSPACE}"/utils/utils_sys/diag_sys.c")
list(APPEND PATH_SRC ${PATH_WORKSPACE}"/Drivers/cli_drv/log_commands.c")


#target_compile_definitions(${COMPONENT_TARGET} PUBLIC "-DHAS_CLI")
idf_component_register(SRCS "hello_world_main.c" ${PATH_SRC}
                       INCLUDE_DIRS ${PATH_INC})

target_compile_options(${COMPONENT_TARGET} PUBLIC -DHAS_MCU -DHAS_CLOCK -DHAS_CLI -DHAS_TASKS -DHAS_GPIO -DHAS_DEBUG -DHAS_SUPER_LOOP -DHAS_UART -DESP32 -DHAS_FREE_RTOS)