
set(PATH_INC)
set(PATH_SRC)
set(PATH_WORKSPACE C:/1_job/0_NPP_IT_ELMA/code_base_workspace_esp/ti_mcu_code_base)
set(PATH_ESP_IDF C:/esp/esp-idf)

list(APPEND PATH_INC ${PATH_WORKSPACE}"/common")


list(APPEND PATH_INC ${PATH_ESP_IDF}"/components/freertos/FreeRTOS-Kernel/include/freertos")
list(APPEND PATH_INC ${PATH_ESP_IDF}"/components/driver/include/driver")
list(APPEND PATH_INC ${PATH_ESP_IDF}"/components/hal/include/hal")
list(APPEND PATH_INC ${PATH_WORKSPACE}"/")
list(APPEND PATH_INC ${PATH_WORKSPACE}"/boards/tBeamV1_1")
list(APPEND PATH_INC ${PATH_WORKSPACE}"/bsp_esp32")
list(APPEND PATH_INC ${PATH_WORKSPACE}"/bsp_esp32/clocks")
list(APPEND PATH_INC ${PATH_WORKSPACE}"/bsp_esp32/core_drv")
list(APPEND PATH_INC ${PATH_WORKSPACE}"/bsp_esp32/flash")
list(APPEND PATH_INC ${PATH_WORKSPACE}"/bsp_esp32/gpio")
list(APPEND PATH_INC ${PATH_WORKSPACE}"/bsp_esp32/i2c")
list(APPEND PATH_INC ${PATH_WORKSPACE}"/bsp_esp32/spi")
list(APPEND PATH_INC ${PATH_WORKSPACE}"/bsp_esp32/uart")
list(APPEND PATH_INC ${PATH_WORKSPACE}"/components/system")
list(APPEND PATH_INC ${PATH_WORKSPACE}"/Drivers/boot_drv")
list(APPEND PATH_INC ${PATH_WORKSPACE}"/Drivers/cli_drv")
list(APPEND PATH_INC ${PATH_WORKSPACE}"/Drivers/task_drv")
list(APPEND PATH_INC ${PATH_WORKSPACE}"/mcu")
list(APPEND PATH_INC ${PATH_WORKSPACE}"/projects/t_beam_v1_1_example/main")
list(APPEND PATH_INC ${PATH_WORKSPACE}"/utils")
list(APPEND PATH_INC ${PATH_WORKSPACE}"/utils/fifo")
list(APPEND PATH_INC ${PATH_WORKSPACE}"/utils/io_utils")
list(APPEND PATH_INC ${PATH_WORKSPACE}"/Drivers/axp192")
list(APPEND PATH_INC ${PATH_WORKSPACE}"/utils/utils_string")
list(APPEND PATH_INC ${PATH_WORKSPACE}"/utils/utils_sys")
list(APPEND PATH_SRC ${PATH_WORKSPACE}"/boards/tBeamV1_1/board_layout.c")
list(APPEND PATH_SRC ${PATH_WORKSPACE}"/bsp_esp32/clocks/clocks.c")
list(APPEND PATH_SRC ${PATH_WORKSPACE}"/bsp_esp32/core_drv/core_driver.c")
list(APPEND PATH_SRC ${PATH_WORKSPACE}"/bsp_esp32/flash/flash_drv.c")
list(APPEND PATH_SRC ${PATH_WORKSPACE}"/bsp_esp32/gpio/gpio_commands.c")
list(APPEND PATH_SRC ${PATH_WORKSPACE}"/bsp_esp32/gpio/gpio_diag.c")
list(APPEND PATH_SRC ${PATH_WORKSPACE}"/bsp_esp32/gpio/gpio_drv.c")
list(APPEND PATH_SRC ${PATH_WORKSPACE}"/bsp_esp32/spi/spi_commands.c")
list(APPEND PATH_SRC ${PATH_WORKSPACE}"/bsp_esp32/spi/spi_drv.c")
list(APPEND PATH_SRC ${PATH_WORKSPACE}"/bsp_esp32/sys.c")
list(APPEND PATH_SRC ${PATH_WORKSPACE}"/bsp_esp32/uart/uart_drv.c")
list(APPEND PATH_SRC ${PATH_WORKSPACE}"/bsp_esp32/i2c/i2c_drv.c")
list(APPEND PATH_SRC ${PATH_WORKSPACE}"/bsp_esp32/i2c/i2c_commands.c")

list(APPEND PATH_INC ${PATH_WORKSPACE}"/utils/crc")
list(APPEND PATH_INC ${PATH_WORKSPACE}"/Drivers/lora")
list(APPEND PATH_INC ${PATH_WORKSPACE}"/Drivers/sx1262")

list(APPEND PATH_SRC ${PATH_WORKSPACE}"/unit_tests/test_list.c")
list(APPEND PATH_SRC ${PATH_WORKSPACE}"/unit_tests/unit_test_commands.c")
list(APPEND PATH_SRC ${PATH_WORKSPACE}"/unit_tests/unit_test_run.c")
list(APPEND PATH_SRC ${PATH_WORKSPACE}"/unit_tests/unit_test.c")

list(APPEND PATH_SRC ${PATH_WORKSPACE}"/unit_tests/test_set_hw/test_spi/test_spi.c")
list(APPEND PATH_INC ${PATH_WORKSPACE}"/unit_tests/test_set_hw/test_spi")

list(APPEND PATH_INC ${PATH_WORKSPACE}"/unit_tests/test_set_hw/test_gpio")
list(APPEND PATH_SRC ${PATH_WORKSPACE}"/unit_tests/test_set_hw/test_gpio/test_gpio.c")

list(APPEND PATH_INC ${PATH_WORKSPACE}"/unit_tests")
list(APPEND PATH_INC ${PATH_WORKSPACE}"/unit_tests/test_set_hw")
list(APPEND PATH_INC ${PATH_WORKSPACE}"/unit_tests/test_set_hw/test_sx1262")
list(APPEND PATH_SRC ${PATH_WORKSPACE}"/unit_tests/test_set_hw/test_sx1262/test_sx1262.c")

list(APPEND PATH_SRC ${PATH_WORKSPACE}"/utils/crc/crc8_sae_j1850.c")

list(APPEND PATH_SRC ${PATH_WORKSPACE}"/Drivers/sx1262/sx1262_registers.c")
list(APPEND PATH_SRC ${PATH_WORKSPACE}"/Drivers/sx1262/legal_band.c")
list(APPEND PATH_SRC ${PATH_WORKSPACE}"/Drivers/sx1262/sx1262_diag.c")
list(APPEND PATH_SRC ${PATH_WORKSPACE}"/Drivers/sx1262/sx1262_commands.c")
list(APPEND PATH_SRC ${PATH_WORKSPACE}"/Drivers/sx1262/sx1262_drv.c")
list(APPEND PATH_SRC ${PATH_WORKSPACE}"/common/common_functions.c")
list(APPEND PATH_SRC ${PATH_WORKSPACE}"/common/gpio_common.c")
list(APPEND PATH_SRC ${PATH_WORKSPACE}"/common/hw_init.c")
list(APPEND PATH_SRC ${PATH_WORKSPACE}"/common/spi_common.c")
list(APPEND PATH_SRC ${PATH_WORKSPACE}"/common/sw_init.c")
list(APPEND PATH_SRC ${PATH_WORKSPACE}"/common/uart_common.c")
list(APPEND PATH_SRC ${PATH_WORKSPACE}"/Drivers/cli_drv/base_cmd.c")
list(APPEND PATH_SRC ${PATH_WORKSPACE}"/Drivers/cli_drv/cli_manager.c")
list(APPEND PATH_SRC ${PATH_WORKSPACE}"/Drivers/cli_drv/log_commands.c")
list(APPEND PATH_SRC ${PATH_WORKSPACE}"/Drivers/cli_drv/table_utils.c")
list(APPEND PATH_SRC ${PATH_WORKSPACE}"/Drivers/axp192/axp192_commands.c")
list(APPEND PATH_SRC ${PATH_WORKSPACE}"/Drivers/axp192/axp192_drv.c")
list(APPEND PATH_SRC ${PATH_WORKSPACE}"/Drivers/task_drv/task_info.c")
list(APPEND PATH_INC ${PATH_WORKSPACE}"/Drivers/led_drv")
list(APPEND PATH_SRC ${PATH_WORKSPACE}"/utils/bit_utils.c")
list(APPEND PATH_SRC ${PATH_WORKSPACE}"/utils/utils_math/utils_math.c")
list(APPEND PATH_INC ${PATH_WORKSPACE}"/utils/utils_math")

list(APPEND PATH_SRC ${PATH_WORKSPACE}"/unit_tests/print_buffer.c")
list(APPEND PATH_SRC ${PATH_WORKSPACE}"/utils/none_blocking_pause.c")
list(APPEND PATH_SRC ${PATH_WORKSPACE}"/Drivers/lora/lora_drv.c")
list(APPEND PATH_SRC ${PATH_WORKSPACE}"/utils/array.c")
list(APPEND PATH_SRC ${PATH_WORKSPACE}"/utils/byte_utils.c")
list(APPEND PATH_SRC ${PATH_WORKSPACE}"/utils/data_utils.c")
list(APPEND PATH_SRC ${PATH_WORKSPACE}"/utils/debug_info.c")
list(APPEND PATH_SRC ${PATH_WORKSPACE}"/Drivers/led_drv/led_drv.c")
list(APPEND PATH_SRC ${PATH_WORKSPACE}"/utils/float_utils.c")
list(APPEND PATH_SRC ${PATH_WORKSPACE}"/utils/fifo/fifo_array.c")
list(APPEND PATH_SRC ${PATH_WORKSPACE}"/utils/fifo/fifo_char.c")
list(APPEND PATH_SRC ${PATH_WORKSPACE}"/utils/fifo/fifo_index.c")
list(APPEND PATH_SRC ${PATH_WORKSPACE}"/utils/io_utils/io_utils.c")
list(APPEND PATH_SRC ${PATH_WORKSPACE}"/utils/io_utils/log.c")
list(APPEND PATH_SRC ${PATH_WORKSPACE}"/utils/io_utils/oprintf.c")
list(APPEND PATH_SRC ${PATH_WORKSPACE}"/utils/io_utils/ostream.c")
list(APPEND PATH_SRC ${PATH_WORKSPACE}"/utils/io_utils/uart_string_reader.c")
list(APPEND PATH_SRC ${PATH_WORKSPACE}"/utils/io_utils/writer_config.c")
list(APPEND PATH_SRC ${PATH_WORKSPACE}"/utils/io_utils/writer_generic.c")
list(APPEND PATH_SRC ${PATH_WORKSPACE}"/unit_tests/test_set_hw/test_hw_list.c")
list(APPEND PATH_SRC ${PATH_WORKSPACE}"/utils/io_utils/writer_uart.c")
list(APPEND PATH_SRC ${PATH_WORKSPACE}"/utils/read_mem.c")
list(APPEND PATH_SRC ${PATH_WORKSPACE}"/utils/time_utils.c")
list(APPEND PATH_SRC ${PATH_WORKSPACE}"/utils/utils_string/convert.c")
list(APPEND PATH_SRC ${PATH_WORKSPACE}"/utils/utils_string/str_utils.c")
list(APPEND PATH_SRC ${PATH_WORKSPACE}"/Drivers/led_drv/led_commands.c")


#target_compile_definitions(${COMPONENT_TARGET} PUBLIC "-DHAS_CLI")
idf_component_register(SRCS "main_thread.c" ${PATH_SRC}
                       INCLUDE_DIRS ${PATH_INC})
# -DHAS_SX1262_POLL -DHAS_SPI_SW_CHIP_SELECT
target_compile_options(${COMPONENT_TARGET} PUBLIC -Os -DHAS_AXP192_COMMANDS -DHAS_AXP192 -DHAS_I2C0 -DHAS_I2C -DHAS_I2C_COMMANDS -DHAS_SPI_SW_CHIP_SELECT -DHAS_LED_COMMANDS  -DconfigSUPPORT_STATIC_ALLOCATION=1 -DHAS_MCU -DHAS_LOG -DHAS_TEST_GPIO -DHAS_TEST_SPI -DHAS_TEST_SX1262 -DHAS_UNIT_TEST -DHAS_HW_TESTS -DHAS_SX1262 -DHAS_SPI_COMMANDS -DHAS_SX1262_DEBUG -DHAS_LED -DHAS_CLOCK -DHAS_LORA -DHAS_CLI -DHAS_TASKS -DHAS_GPIO -DHAS_DEBUG -DHAS_SX1262_EX_DEBUG -DHAS_SUPER_LOOP -DHAS_GPIO_COMMANDS -DHAS_UART -DESP32 -DHAS_FREE_RTOS -DHAS_SPI -DHAS_SPI3  -Wno-stringop-overflow)
